<resources>
    <string name="app_name">ProteinCalenderApp</string>
    <string name="total_on_month">今月の合計</string>
    <string name="look_total">グラフ集計</string>
    <string name="calendar_sunday">SUN</string>
    <string name="calender_monday">MON</string>
    <string name="calender_tuesday">TUE</string>
    <string name="calender_wednesday">WED</string>
    <string name="calender_thursday">THU</string>
    <string name="calender_friday">FRI</string>
    <string name="calender_saturday">SAT</string>
    <string name="calender_last_month">前月</string>
    <string name="calender_next_month">次月</string>
    <string name="calender_select_protein_type">プロテインの種類を選択する</string>
    <string name="dialog_close_button">閉じる</string>
    <string name="dialog_message">すでにプロテインが記録されています</string>

</resources>
